--- a/PeriodTracker/Base.lproj/Main.storyboard
+++ b/PeriodTracker/Base.lproj/Main.storyboard
@@ -101,7 +101,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Third View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="6s2-NP-7XO">
-                                <rect key="frame" x="106" y="321" width="163" height="87"/>
+                                <rect key="frame" x="106" y="362.66666666666669" width="163" height="87"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="87" id="0PK-6e-Doc"/>
@@ -496,7 +496,7 @@
     </scenes>
     <resources>
         <image name="first" width="30" height="30"/>
-        <image name="heart" width="191" height="225"/>
+        <image name="heart" width="143.25" height="168.75"/>
     </resources>
     <color key="tintColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
